<resources>
    <string name="app_name">DailyDiet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Todays Diet</string>
    <string name="title_notifications">Profile</string>
    <string name="weight">WEIGHT</string>
    <string name="status">Status</string>
    <string name="bmi">BMI :</string>
    <string name="textview">BMI</string>
    <string name="textView2">WEIGHT</string>
    <string name="title_activity_user_info_sex">UserInfoSex</string>
    <string name="title_activity_user_age">UserAge</string>
    <string name="title_activity_user_height">UserHeight</string>
    <string name="next">Next</string>
    <string name="age">Enter your age in years</string>
    <string name="text1">How old are you ?</string>
    <string name="next2">Next</string>
    <string name="height">Height in centi meters</string>
    <string name="text2">What is your height?</string>
    <string name="next3">next3</string>
    <string name="text3">What is your weight?</string>
    <string name="next4">next4</string>
    <string name="femaleToggle">FEMALE</string>
    <string name="maleToggle">MALE</string>
    <string name="AddItem">EDIT</string>
    <string name="search">Search</string>
    <string name="calorie">Calorie</string>
    <string name="how_active_are_you">How active you are?</string>
    <string name="not_active">Not Active</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="very_active">Very Active</string>
    <string name="heavily_active">Heavily Active</string>
    <string name="active">Active</string>
    <string name="button">Button</string>
    <string name="calorie_budget">YOUR CALORIE BUDGET</string>
    <string name="calorie_remaining">REMAINING CALORIE BUDGET</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="let_s_begin">Let\'s Begin! :)</string>
    <string name="gender">Select your gender</string>
    <string name="searching">Searching..</string>


</resources>
