<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bmi"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="184dp"
        android:background="#FFFFFF"
        android:clickable="false"
        android:textSize="18dp"
        android:text="@string/bmi"
        android:textAllCaps="true"
        android:textColor="#F52A48"
        android:textColorLink="#FFF38B6D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/weight"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:background="#FFFFFF"
        android:textSize="18dp"
        android:clickable="false"
        android:text="@string/weight"
        android:textColor="#F52A48"
        android:textColorLink="#FFF38B6D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bmi"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/status"
        android:layout_width="242dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="163dp"
        android:background="#F52A48"
        android:clickable="false"
        android:text="@string/status"
        android:textSize="18dp"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFF38B6D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/BMI"
        android:layout_width="91dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="9dp"
        android:clickable="false"
        android:editable="false"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        app:fontFamily="@font/arsenal_bold"
        app:layout_constraintBottom_toTopOf="@+id/bmi"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginBottom="9dp"
        android:clickable="false"
        android:editable="false"
        android:text="@string/textView2"

        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        app:fontFamily="@font/arsenal_bold"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintStart_toEndOf="@+id/BMI" />

    <Button
        android:id="@+id/budget"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="64dp"
        android:background="#F52A48"
        android:clickable="false"
        android:textSize="18dp"
        android:text="@string/button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>