<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addinfo.GenderActivity">

    <Button
        android:id="@+id/next4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/next4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/femaleToggle" />

    <ToggleButton
        android:id="@+id/maleToggle"
        android:layout_width="177dp"
        android:layout_height="389dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/maleToggle"
        android:textOff="@string/maleToggle"
        android:textOn="@string/maleToggle"
        app:layout_constraintEnd_toStartOf="@+id/femaleToggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/femaleToggle"
        android:layout_width="190dp"
        android:layout_height="389dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/femaleToggle"
        android:textOff="@string/femaleToggle"
        android:textOn="@string/femaleToggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maleToggle"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>